--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
     <title>React Blogify | Learn with Sumit</title>
 </head>
-  <body class="bg-[#030317] text-white"> 
-    <div id="root" ></div>
+  <body class="bg-[#030317] text-white relative"> 
+    <div id="root" >
+      
+    </div>
+    <div id="modal-root" class="h-full w-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
